<resources>
    <string name="app_name">AppTransporte</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_sitiosInteres">Sitios de Interes</string>
    <string name="menu_misViajes">Mis Viajes</string>
    <string name="menu_recorridos">Recorridos</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_Favorito">Favorito</string>
    <string name="menu_idioma">Idioma</string>

    <string name="nombre_aplicacion">TranStreet</string>
    <string name="txtTarifaN">Tarifa: </string>
    <string name="txtNameTarifaNormal">Tarifa: </string>
    <string name="txtNameTarifaEspecial">Tarifa especial: </string>
    <string name="txtViajesValor">Tarifa: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
